--- a/css/main.css
+++ b/css/main.css
@@ -913,7 +913,7 @@ a {
 .fp-nav-wrapper {
   position: fixed;
   z-index: 200;
-  background: #3b5998;
+  background: #E94444;
   width: 100%;
   height: 100%; }
 
