--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -70,7 +70,7 @@
 .fp-nav-wrapper {
 	position: fixed;
 	z-index: 200;
-	background: #3b5998;
+	background: $salmon;
 	width: 100%;
 	height: 100%;
 
