--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,35 @@
+/* Consistent settings */
+/* Colors */
+/* project colors - this project colors need assigned to these variables once you comfirm color scheme */
+/* project two colors */
+/* util colors */
+/* global background color */
+html {
+  background: #1D2A46; }
+
+.clearfix,
+.group {
+  zoom: 1; }
+  .clearfix:before, .clearfix:after,
+  .group:before,
+  .group:after {
+    content: "\0020";
+    display: block;
+    height: 0;
+    overflow: hidden; }
+  .clearfix:after,
+  .group:after {
+    clear: both; }
+
+/**
+ * TYPOGRAPHY
+ */
 /*!
- * fullPage 2.8.6
+ * fullPage 2.8.8
  * https://github.com/alvarotrigo/fullPage.js
  * MIT licensed
  *
  * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
- * Contribution by Jhony0311
  */
 html.fp-enabled,
 .fp-enabled body {
@@ -59,118 +84,167 @@ html.fp-enabled,
   float: left;
   position: relative; }
 
+.fp-controlArrow {
+  -webkit-user-select: none;
+  /* webkit (safari, chrome) browsers */
+  -moz-user-select: none;
+  /* mozilla browsers */
+  -khtml-user-select: none;
+  /* webkit (konqueror) browsers */
+  -ms-user-select: none;
+  /* IE10+ */
+  position: absolute;
+  z-index: 4;
+  top: 50%;
+  cursor: pointer;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  margin-top: -38px;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.fp-controlArrow.fp-prev {
+  left: 15px;
+  width: 0;
+  border-width: 38.5px 34px 38.5px 0;
+  border-color: transparent #fff transparent transparent; }
+
+.fp-controlArrow.fp-next {
+  right: 15px;
+  border-width: 38.5px 0 38.5px 34px;
+  border-color: transparent transparent transparent #fff; }
+
 .fp-scrollable {
-  overflow: scroll; }
+  overflow: hidden;
+  position: relative; }
+
+.fp-scroller {
+  overflow: hidden; }
+
+.iScrollIndicator {
+  border: 0 !important; }
 
 .fp-notransition {
   -webkit-transition: none !important;
   transition: none !important; }
 
-.fp-slidesNav {
-  position: absolute;
-  z-index: 4;
-  left: 50%;
-  opacity: 1; }
-  .fp-slidesNav.bottom {
-    bottom: 17px; }
-  .fp-slidesNav.top {
-    top: 17px; }
-
-#fp-nav ul,
-.fp-slidesNav ul {
-  margin: 0;
-  padding: 0; }
-  #fp-nav ul li,
-  .fp-slidesNav ul li {
-    display: block;
-    width: 14px;
-    height: 13px;
-    margin: 7px;
-    position: relative; }
-    #fp-nav ul li a,
-    .fp-slidesNav ul li a {
-      display: block;
-      position: relative;
-      z-index: 1;
-      width: 100%;
-      height: 100%;
-      cursor: pointer;
-      text-decoration: none; }
-      #fp-nav ul li a.active span,
-      .fp-slidesNav ul li a.active span {
-        height: 12px;
-        width: 12px;
-        margin: -6px 0 0 -6px;
-        border-radius: 100%; }
-        #fp-nav ul li:hover #fp-nav ul li a.active span,
-        #fp-slidesNav ul li:hover #fp-nav ul li a.active span, #fp-nav ul li:hover
-        .fp-slidesNav ul li a.active span,
-        #fp-slidesNav ul li:hover
-        .fp-slidesNav ul li a.active span {
-          height: 12px;
-          width: 12px;
-          margin: -6px 0 0 -6px;
-          border-radius: 100%; }
-      #fp-nav ul li a span,
-      .fp-slidesNav ul li a span {
-        border-radius: 50%;
-        position: absolute;
-        z-index: 1;
-        height: 4px;
-        width: 4px;
-        border: 0;
-        background: #fff;
-        left: 50%;
-        top: 50%;
-        margin: -2px 0 0 -2px;
-        -webkit-transition: all 0.1s ease-in-out;
-        transition: all 0.1s ease-in-out; }
-    #fp-nav ul li:hover a span,
-    .fp-slidesNav ul li:hover a span {
-      width: 10px;
-      height: 10px;
-      margin: -5px 0px 0px -5px; }
-
 #fp-nav {
-  display: none;
   position: fixed;
   z-index: 100;
   margin-top: -32px;
   top: 50%;
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0); }
-  #fp-nav.right {
-    right: 17px; }
-  #fp-nav.left {
-    left: 17px; }
-  #fp-nav ul li .fp-tooltip {
-    position: absolute;
-    top: -2px;
-    color: #fff;
-    font-size: 14px;
-    font-family: arial, helvetica, sans-serif;
-    white-space: nowrap;
-    max-width: 220px;
-    overflow: hidden;
-    display: block;
-    opacity: 0;
-    width: 0;
-    cursor: pointer; }
-    #fp-nav ul li .fp-tooltip.right {
-      right: 20px; }
-  #fp-nav ul li:hover .fp-tooltip {
-    -webkit-transition: opacity 0.2s ease-in;
-    transition: opacity 0.2s ease-in;
-    width: auto;
-    opacity: 1; }
-  #fp-nav.fp-show-active a.active + .fp-tooltip {
-    -webkit-transition: opacity 0.2s ease-in;
-    transition: opacity 0.2s ease-in;
-    width: auto;
-    opacity: 1; }
+
+#fp-nav.right {
+  right: 17px; }
+
+#fp-nav.left {
+  left: 17px; }
+
+.fp-slidesNav {
+  position: absolute;
+  z-index: 4;
+  left: 50%;
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.fp-slidesNav.bottom {
+  bottom: 17px; }
+
+.fp-slidesNav.top {
+  top: 17px; }
+
+#fp-nav ul,
+.fp-slidesNav ul {
+  margin: 0;
+  padding: 0; }
+
+#fp-nav ul li,
+.fp-slidesNav ul li {
+  display: block;
+  width: 14px;
+  height: 13px;
+  margin: 7px;
+  position: relative; }
 
 .fp-slidesNav ul li {
   display: inline-block; }
+
+#fp-nav ul li a,
+.fp-slidesNav ul li a {
+  display: block;
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  text-decoration: none; }
+
+#fp-nav ul li a.active span,
+.fp-slidesNav ul li a.active span,
+#fp-nav ul li:hover a.active span,
+.fp-slidesNav ul li:hover a.active span {
+  height: 12px;
+  width: 12px;
+  margin: -6px 0 0 -6px;
+  border-radius: 100%; }
+
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+  display: none;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 1;
+  height: 4px;
+  width: 4px;
+  border: 0;
+  background: rgba(255, 255, 255, 0.1);
+  left: 50%;
+  top: 50%;
+  margin: -2px 0 0 -2px;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out; }
+
+@media (min-width: 750px) {
+  #fp-nav ul li a span,
+  .fp-slidesNav ul li a span {
+    display: inherit; } }
+
+#fp-nav ul li:hover a span,
+.fp-slidesNav ul li:hover a span {
+  width: 10px;
+  height: 10px;
+  margin: -5px 0px 0px -5px; }
+
+#fp-nav ul li .fp-tooltip {
+  position: absolute;
+  top: -2px;
+  color: #FEFEE6;
+  font-size: 10px;
+  font-family: arial, helvetica, sans-serif;
+  white-space: nowrap;
+  max-width: 220px;
+  overflow: hidden;
+  display: block;
+  opacity: 0;
+  width: 0;
+  cursor: pointer; }
+
+#fp-nav ul li:hover .fp-tooltip,
+#fp-nav.fp-show-active a.active + .fp-tooltip {
+  -webkit-transition: opacity 0.2s ease-in;
+  transition: opacity 0.2s ease-in;
+  width: auto;
+  opacity: 1; }
+
+#fp-nav ul li .fp-tooltip.right {
+  right: 20px; }
+
+#fp-nav ul li .fp-tooltip.left {
+  left: 20px; }
 
 .fp-auto-height.fp-section,
 .fp-auto-height .fp-slide,
@@ -182,32 +256,6 @@ html.fp-enabled,
 .fp-responsive .fp-auto-height-responsive .fp-tableCell {
   height: auto !important; }
 
-/* Consistent settings */
-/* Colors */
-/* project colors - this project colors need assigned to these variables once you comfirm color scheme */
-/* project two colors */
-/* util colors */
-/* global background color */
-html {
-  background: #1D2A46; }
-
-.clearfix,
-.group {
-  zoom: 1; }
-  .clearfix:before, .clearfix:after,
-  .group:before,
-  .group:after {
-    content: "\0020";
-    display: block;
-    height: 0;
-    overflow: hidden; }
-  .clearfix:after,
-  .group:after {
-    clear: both; }
-
-/**
- * TYPOGRAPHY
- */
 /* Responsive grid
    ========================================================================== */
 .container {
