--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -48,7 +48,8 @@ $reverse: #FEFEE6;
 
 $salmon: #E94444;
 // $salmon: #e9c2c3;
-$dark-blue: #1D2A46;
+$dark-blue: #1e2832;
+// $dark-blue: #1D2A46;
 $light-blue: #33b2ff;
 $pink: #F15FA8;
 $warm-grey: #1D2831;
