--- a/css/sass/base/_shame.scss
+++ b/css/sass/base/_shame.scss
@@ -11,12 +11,11 @@
 	color: $reverse;
 	background: $salmon;
 	text-transform: uppercase;
-	// position: absolute;
+	position: absolute;
 	bottom: 0;
 	left: 50%;
 	transform: translateX(-50%);
 	font-size: 10px;
 	letter-spacing: 0.4em;
 	cursor: pointer;
-	z-index: 5000;
 }
