--- a/css/main.css
+++ b/css/main.css
@@ -1096,6 +1096,26 @@ a {
   .social-main {
     visibility: hidden; } }
 
+/**
+ * MAIN FOOTER ELEMENTS 
+ */
+.footer {
+  height: 60px;
+  background: #273340; }
+  .footer .main-footer {
+    text-align: center;
+    font-size: 0.75em;
+    width: 960px;
+    padding: 0 30px; }
+    .footer .main-footer p,
+    .footer .main-footer i {
+      color: #fff; }
+    .footer .main-footer i {
+      margin-right: 5px; }
+    .footer .main-footer p {
+      font-size: 0.95em;
+      margin: 0px; }
+
 * {
   box-sizing: border-box !important; }
 
@@ -1421,7 +1441,8 @@ hr {
   text-align: center; }
   .prototype-intro-wrapper .intro-text h1 {
     font-size: 2em;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    color: #E94444; }
   .prototype-intro-wrapper .intro-text p {
     margin-bottom: 5px;
     color: #FEFEE6; }
@@ -1451,8 +1472,7 @@ hr {
           flex-basis: calc((100%/3)*2);
       margin: 10px; }
       .prototype-intro-wrapper .intro-text h1 {
-        font-size: 3.5em;
-        color: #E94444; }
+        font-size: 3.5em; }
     .prototype-intro-wrapper .welcome-iphone {
       margin-top: 0px; } }
 
@@ -1607,15 +1627,6 @@ hr {
         flex-basis: 25%;
     max-width: 25%;
     text-align: right; } }
-
-/* Footer */
-.footer {
-  height: 200px;
-  background: #000; }
-  .footer .social-footer {
-    color: #fff;
-    text-align: center;
-    font-size: 1.5em; }
 
 /* USER INTERFACE CASE STUDY / TANDEM
    ========================================================================== */
