--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -247,6 +247,31 @@
 	}
 }
 
+/**
+ * MAIN FOOTER ELEMENTS 
+ */
+
+.footer {
+	height: 60px;
+	background: #273340;
+		.main-footer {
+			text-align: center;
+			font-size: 0.75em;
+			width: 960px;
+			padding: 0 30px;
+			p,
+			i {
+				color: #fff;
+			}
+			i {
+				margin-right: 5px;
+			}
+			p {
+				font-size: 0.95em;
+				margin: 0px;
+			}
+		}
+}
 	
 
 
