--- a/css/sass/pages/_ui.scss
+++ b/css/sass/pages/_ui.scss
@@ -9,7 +9,7 @@
 		color: $salmon;
 	}
 	p {
-		color: $reverse-font-color;
+		color: $primary-font-color;
 		margin-bottom: 30px;
 	}
 }
@@ -97,27 +97,74 @@
 	 TANDEM INTRO SECTION
  	 ---------------------------------*/
 
-/**
- * MOBILE FIRST QUERIES
- */
-
 .tandem-intro {
-	text-align: center;
-	color: $primary-font-color;
-	background: $salmon;
-	min-height: 50vh;
-	h2 {
-		color: $reverse;
+		min-height: 85vh;
+		background: #1D2A46;
+	.intro-text {
+		p {
+			text-align: left;
+			color: $reverse;
+		}
+		p:last-child{
+			margin-bottom: 0;
+		}
+		.intro-para {
+			font-size: 1.3em;
+			line-height: 1.2;
+			font-family: $medium;
+		}
 	}
 }
 
+
+@media screen and (min-width: 750px) {
+	.tandem-intro {
+		.intro-text {
+			h5 {
+				margin-bottom: 3em;
+			}
+			p {
+				text-align: left;
+			}
+			p:last-child{
+				margin-bottom: 0;
+			}
+			.intro-para {
+				font-size: 1.6em;
+				line-height: 1.4;
+			}
+		}
+	}
+}
+
+/**
+	 TANDEM PROCESS SECTION
+ 	 ---------------------------------*/
+
+.tadem-process {
+	min-height: 85vh;
+	background: #fff;
+	h6 {
+		@include captionitalic;
+	}
+}
+
+/**
+	 TANDEM FINAL DESIGN SECTION
+ 	 ---------------------------------*/
+
+
+
 .tandem-final-design {
-	margin: 30px 0;
+	background: #F2F2F2;
 	color: $primary-font-color;
+	.final-design-container {
+		margin: 30px auto;
+	}
 	.tandem-screen-img {
 		margin-bottom: 35px;
 		img {
-			box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+			box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
 		}
 	}
 }
