--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -5,6 +5,7 @@
 // Default button
 .btn {
   border-radius: $btn-br;
+  // border-radius: 50%;
   background: transparent;
   border: 1px solid $reverse;
   color: $reverse;
