--- a/css/sass/components/_animation.scss
+++ b/css/sass/components/_animation.scss
@@ -10,3 +10,23 @@
     stroke: $salmon;
   }
 }
+
+ /* Pixi Js */
+
+ .rendererView {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			z-index: -1
+			
+ }
+
+ // .main-landing-page {
+ // 			position: relative;
+	// 		z-index: 100;
+
+ // }
