add screenshot of sketch app design interations

--- a/css/main.css
+++ b/css/main.css
@@ -1874,3 +1874,8 @@ hr {
   font-size: 10px;
   letter-spacing: 0.4em;
   cursor: pointer; }
+
+.sketch-screenshot {
+  margin: 0 auto; }
+  .sketch-screenshot img {
+    width: 960px; }
