--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -23,6 +23,9 @@
 @font-face { font-family: proxima_bold; src: url(../fonts/Proxima-Nova-Bold.otf);}
 @font-face { font-family: proxima_black; src: url(../fonts/Proxima-Nova-Black.otf);}
 
+@font-face { font-family: galaxy_body; src: url(../fonts/GalaxieCopernicus-Book.otf);}
+
+
 // $body: Gotham_thin, sans-serif;
 // $medium: Gotham_medium, sans-serif;
 // $bold: Gotham_black, sans-serif;
@@ -38,6 +41,8 @@ $light_avant: avant_light, sans-serif;
 $body_avant: avant_book, sans-serif;
 $medium_avant: avant_medium, sans-serif;
 $bold_avant: avant_bold, sans-serif;
+
+$body_galaxy: galaxy_body, sans-serif;
 
 $primary-font-color: #333; //Raven
 $reverse-font-color: $reverse;
@@ -64,7 +69,7 @@ h6 {
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
 
-    font-family: $black , "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: $bold , "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     color: $reverse;
     margin: 0px;
     font-weight: normal;
@@ -72,6 +77,7 @@ h6 {
 
 h1 {
   margin-bottom: 0.5em;
+  font-family: $black , "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
 h2,
