--- a/css/sass/pages/_ui.scss
+++ b/css/sass/pages/_ui.scss
@@ -24,14 +24,7 @@
 .ui-intro-wrapper {
 
 	.ui-watermark {
-		width: 100%;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		position: absolute;
-		z-index: -1;
-		opacity: 0.02;
-		visibility: hidden;
+		@include watermark;
 	}
 
 	.welcome-iphone {
