add new content prototype page

--- a/css/main.css
+++ b/css/main.css
@@ -1507,7 +1507,7 @@ hr {
  */
 .introduction {
   min-height: 85vh;
-  background: #FFF5DD; }
+  background: #e4ecf1; }
   .introduction .introduction-text a {
     color: #333; }
   .introduction .introduction-text p {
