--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -126,7 +126,7 @@
 
 .introduction {
 		min-height: 85vh;
-		background: #FFF5DD;
+		background: #e4ecf1;
 	.introduction-text {
 		a {
 			color: $primary-font-color;
