--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -217,27 +217,32 @@
 	position: absolute;
 	right: 4%;
 	bottom: 4%;
-	.contact,
-	.contact-item,
-	.about-btn {
-		text-transform: uppercase;
-		font-family: $body;
+	li {
+		list-style-type: none;
 		font-size: 14px;
-		color: $salmon;
-		margin-left: 5px;
+		float: left;
+		border: 1px solid rgba(233,68, 68, 0.1);
+		i {
+		height: 35px;
+		width: 35px;
+		text-align: center;
+		line-height: 35px;
+		}
 	}
-	.contact {
-		margin-right: 5px;
+	li:nth-of-type(1),
+	li:nth-of-type(2),
+	li:nth-of-type(3) {
+		border-right: 0px;
 	}
-	.about-btn {
-	font-family: $medium_avant;
-	cursor: pointer;
-	}
-	.about-tube-separator {
-		font-family: $body_avant;
-		cursor: default;
+	li:hover {
+		background: $salmon;
+		i {
+			color: $dark-blue;
+		}
+		transition: background 1.5s;
 	}
 }
+
 // **********
 @media (max-width: 550px) {
 	.social-main {
